third_party/move/move-compiler-v2/tests/checking/inlining/break_continue_in_lambda.exp

Diagnostics:
error: Break outside of a loop not supported in function-typed arguments (lambda expressions)
   ┌─ tests/checking/inlining/break_continue_in_lambda.move:40:26
   │
40 │                 brk2(| | break);
   │                          ^^^^^

error: Break outside of a loop not currently supported in inline functions
  ┌─ tests/checking/inlining/break_continue_in_lambda.move:3:9
  │
3 │         break;
  │         ^^^^^
